# Chip8Emulator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE
cmake/: FindGLAD.cmake  FindGLFW3.cmake
include/: emulator.hpp  renderer.hpp  window.hpp  window_manager.hpp
src/: emulator.cpp  main.cpp  renderer.cpp  window.cpp  window_manager.cpp
tests/: main.cpp
